Loomania 2 complete implementation